approach page - fixed scroll issue on mobile approach page - changed card wrap and breakpoint

--- a/src/components/approach-page/approach-page-desktop/ApproachPageDesktop.module.scss
+++ b/src/components/approach-page/approach-page-desktop/ApproachPageDesktop.module.scss
@@ -76,10 +76,21 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   padding-left: 3rem;
   padding-right: 3rem;
   padding-bottom: 16rem;
+
+  @media screen and (max-width: 1349px) {
+    flex-wrap: wrap;
+    padding-top: 28rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .card-content {
