--- a/src/components/approach-page/approach-page-mobile/ApproachPageMobile.module.scss
+++ b/src/components/approach-page/approach-page-mobile/ApproachPageMobile.module.scss
@@ -19,7 +19,6 @@
 
 .post-project-wrapper {
   width: 100%;
-  height: 100vh;
   background-color: #000;
   position: relative;
   overflow: hidden;
